--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ prompt-toolkit==3.0.22
 ptyprocess==0.7.0
 pycparser==2.21
 Pygments==2.10.0
+PyJWT==2.3.0
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
